--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,18 +24,17 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-form{
+form {
   justify-content: center;
   align-items: center;
 }
-button{
+button {
   background-color: #6d6e88;
-  border-radius: 5PX;
+  border-radius: 5px;
   height: 50px;
   width: 150px;
   text-align: center;
   color: white;
-  
 }
 search {
   margin: 0 auto;
@@ -63,7 +62,6 @@ form input {
   letter-spacing: 0.04em;
   transition: border-color 200ms linear;
 }
-
 
 img {
   display: block;
@@ -139,17 +137,16 @@ ul {
   text-align: center;
 }
 
-.loader {
+.loader1 {
   width: 48px;
   height: 48px;
-  border: 5px solid #FFF;
-  border-bottom-color: #FF3D00;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
 }
-
 
 .hidden {
   display: none;
